# DataManagementScripts

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  setup.py
AQBurk2IoTHub/: README.md  aqburk2iothub.py  aqburk2muv.py  utils.py
AQBurk2IoTHub/etc/systemd/system/: aqburk2iothub.service
Csv2Email/: csv2email.py  requirements.txt
FmiAPI/: README.md  README_timeseries.md  fmi_timeseries.py  fmi_utils.py  fmiapi.py  fmiapi_v2.py  pyproject.toml  requirements.txt  tapsi-metadata_helsinki.geojson
HelenAPI/: README.md  helenapi.py
HelenAPI/config/: config_example.py
InfluxDB2CSV/: influxdb2csv.py  influxv2_to_file.py  requirements.txt
InfluxDB2json/: README.md  influxdb2_to_files.py  influxdb2json.py  kymp-r4c-metadata_all.geojson  makelankatu_meta.geojson  r4c_all_meta.geojson  r4c_latest_values.py  r4c_meta.geojson  r4c_vantaa.geojson  requirements.txt  uiras_latest_values.py  uiras_meta.geojson  uirasmeta.py
KaltiotAPI/: .gitignore  README.md  README_v2.md  kaltiot.py  kaltiot2csv.py  kaltiot_v2.py  requirements.txt  tag-list_example.txt
Mqtt2InfluxDB/: README.md  aiomqtt2influxdb2.py  mqtt2influxdb.py  mqtt2influxdb2.py  mqttdemosensor2influxdb_v2.py  requirements.txt
NuukaAPI/: README.md  extract_datapoints.py  nuuka_client.py  requirements.txt
SimapAPI/: README.md  csv2influxdb.py  simap.py
SmartvattenAPI/: README.md  requirements.txt  smartvatten.py
ThingparkAPI/: thingpark_client.py
Yggio/: README.md  pyproject.toml  yggio_client.py  yggio_tool.py  yggio_updater.py
fvhdms/: __init__.py  requirements.txt
fvhdms/influx/: __init__.py
fvhdms/tests/: test_time_convert_to_seconds.py  test_time_parse_times.py
fvhdms/utils/: args.py  file.py  time.py
