[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmi-api-tools"
version = "0.1.0"
description = "FMI API data extraction and processing tools for weather observations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Forum Virium Helsinki"},
]
keywords = ["fmi", "weather", "api", "influxdb", "data-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "argcomplete",
    "fmiopendata",
    "httpx",
    "influxdb_client[extra]",
    "isodate",
    "numpy",
    "pandas",
    "requests",
    "pyarrow",
    "xmltodict",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ipython",
    "jupyter",
]

[project.scripts]
# Main API clients
fmiapi = "fmiapi:main"
fmiapi-v2 = "fmiapi_v2:main"
fmi-timeseries = "fmi_timeseries:main"
parquet2influx = "parquet2influxfb:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fmi_utils", "fvhdms"]
